# basis-vol-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  main.py  mise.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-api.yml  snapshot.yml  terraform.yml  uptime.yml
apps/api/: Dockerfile  Dockerfile.lambda  pyproject.toml
apps/api/src/basis_api/: __init__.py  __main__.py  history.py  main.py  snapshot.py  storage.py
apps/desktop/: pyproject.toml
apps/web/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Card.tsx  Header.tsx  Icons.tsx  Markdown.tsx  PageHeader.tsx  PageState.tsx  ThemeToggle.tsx
apps/web/src/data/: benchmarks.json
apps/web/src/lib/: api.ts  chart.ts  format.ts  lectures.ts  theme.tsx
apps/web/src/pages/: Benchmarks.tsx  Carry.tsx  History.tsx  Learn.tsx  Overview.tsx  Signals.tsx  Vol.tsx
benchmarks/: bench_greeks.py  bench_iv.py  bench_snapshot.py  conftest.py
docs/: progress.md
docs/analytics/: 01-options-and-forward-pricing.md  02-implied-volatility.md  03-greeks.md  04-realized-vs-implied-vol.md  05-carry-basis-funding.md  06-skew-surface-and-signals.md  07-iv-validation.md  08-notebooks.md  README.md
docs/planning/: 0.target.md  1.initial-plan.md  2.step1-scaffold.md  3.step2-data-model.md  4.step3-deribit-connector.md  5.step4-binance-connector.md  6.step5-analytics.md  7.step6-product-shell.md  8.cloud-plan.md
infra/docker/: .env.example  compose.yaml
infra/terraform/: .gitignore  .gitkeep  .terraform.lock.hcl  README.md  backend.tf  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
notebooks/: 01_iv_greek_validation.ipynb  02_carry_regime_explorer.ipynb  03_surface_dynamics.ipynb  04_rv_estimators_comparison.ipynb  05_concurrency_patterns.ipynb  _concurrency_helpers.py
scripts/: export_benchmarks.py
tests/: test_analytics.py  test_api.py  test_binance_parsers.py  test_contracts.py  test_d1_metadata.py  test_deribit_parsers.py  test_greeks.py  test_history.py  test_iv.py  test_metadata.py  test_metadata_factory.py  test_pricing.py  test_realized_vol.py  test_signals.py  test_storage.py  test_surface.py  test_timeseries.py  test_validation.py
