[project]
name = "basis-vol-lab"
version = "0.1.0"
description = "Cross-venue crypto-derivatives regime monitor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "basis-contracts",
    "basis-connectors",
    "basis-analytics",
    "basis-persistence",
    "basis-api",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pre-commit>=4.2",
]
notebooks = [
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "nbformat>=5.10",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]

[tool.uv.sources]
basis-contracts = { workspace = true }
basis-connectors = { workspace = true }
basis-analytics = { workspace = true }
basis-persistence = { workspace = true }
basis-api = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.per-file-ignores]
# Math modules use single-letter capital names by convention (F = forward,
# K = strike, T = time-to-expiry). Same applies to tests that exercise them.
"packages/analytics/src/basis_analytics/pricing.py" = ["N803", "N806"]
"packages/analytics/src/basis_analytics/iv.py" = ["N803", "N806"]
"packages/analytics/src/basis_analytics/greeks.py" = ["N803", "N806"]
"packages/analytics/src/basis_analytics/surface.py" = ["N803", "N806"]
"packages/analytics/src/basis_analytics/realized_vol.py" = ["N803", "N806"]
"packages/analytics/src/basis_analytics/validate.py" = ["N803", "N806"]
"packages/analytics/src/basis_analytics/validation.py" = ["N803", "N806"]
"tests/test_pricing.py" = ["N803", "N806"]
"tests/test_iv.py" = ["N803", "N806"]
"tests/test_greeks.py" = ["N803", "N806"]
"tests/test_validation.py" = ["N803", "N806"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
