[project]
name = "basis-api"
version = "0.1.0"
description = "Thin dynamic endpoints (AWS Lambda)"
requires-python = ">=3.14"
dependencies = [
    "basis-analytics",
    "basis-connectors",
    "basis-contracts",
    "basis-persistence",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mangum>=0.18",
    "httpx>=0.27",
    "pandas>=2.2",
]

[project.optional-dependencies]
# Installed in the Lambda container image (Dockerfile.lambda) so the
# R2 artifact backend and D1 metadata store are importable. Local dev
# does not need either — `BASIS_ARTIFACT_BACKEND=local` is the default.
cloud = [
    # boto3 ≥ 1.36 introduced the `request_checksum_calculation` /
    # `response_checksum_validation` Config knobs we need to disable
    # default integrity protections against Cloudflare R2 (which signs
    # the new CRC32 checksum trailers differently than AWS S3 and would
    # otherwise reject every PutObject with SignatureDoesNotMatch).
    "boto3>=1.36",
    "basis-persistence[cloud]",
]

[tool.uv.sources]
basis-analytics = { workspace = true }
basis-connectors = { workspace = true }
basis-contracts = { workspace = true }
basis-persistence = { workspace = true }
