[project]
name = "basis-api"
version = "0.1.0"
description = "Thin dynamic endpoints (AWS Lambda)"
requires-python = ">=3.14"
dependencies = [
    "basis-analytics",
    "basis-connectors",
    "basis-contracts",
    "basis-persistence",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mangum>=0.18",
    "httpx>=0.27",
    "pandas>=2.2",
]

[project.optional-dependencies]
# Installed in the Lambda container image (Dockerfile.lambda) so the
# R2 artifact backend and D1 metadata store are importable. Local dev
# does not need either — `BASIS_ARTIFACT_BACKEND=local` is the default.
cloud = [
    # Pin boto3 below 1.36. boto3 ≥ 1.36 enables "default integrity
    # protections" (flexible checksums) that wrap PutObject bodies in
    # an `aws-chunked` STREAMING-AWS4-HMAC-SHA256-PAYLOAD-TRAILER
    # framing and add `x-amz-checksum-*` headers. Cloudflare R2 signs
    # using the literal payload SHA-256 and rejects the chunked body
    # with `SignatureDoesNotMatch`. The `Config(request_checksum_*)`
    # / before-sign hooks only strip headers — the body itself is
    # already chunked by then. Pinning to 1.35.x is the only fix that
    # works end-to-end. See boto3#4392.
    "boto3>=1.34,<1.36",
    "basis-persistence[cloud]",
]

[tool.uv.sources]
basis-analytics = { workspace = true }
basis-connectors = { workspace = true }
basis-contracts = { workspace = true }
basis-persistence = { workspace = true }
