[project]
name = "basis-api"
version = "0.1.0"
description = "Thin dynamic endpoints (AWS Lambda)"
requires-python = ">=3.14"
dependencies = [
    "basis-analytics",
    "basis-connectors",
    "basis-contracts",
    "basis-persistence",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mangum>=0.18",
    "httpx>=0.27",
    "pandas>=2.2",
]

[project.optional-dependencies]
# Cloud extras are installed in the Lambda image.
cloud = [
    # R2 rejects boto3 >= 1.36 flexible-checksum PutObject bodies. See boto3#4392.
    "boto3>=1.34,<1.36",
    "basis-persistence[cloud]",
]

[tool.uv.sources]
basis-analytics = { workspace = true }
basis-connectors = { workspace = true }
basis-contracts = { workspace = true }
basis-persistence = { workspace = true }
